more style fixes for mobile

--- a/about.html
+++ b/about.html
@@ -89,9 +89,9 @@
 				<section class="sample-text-area align-center">
 					<div class="container">
 						<!--<h3 class="text-heading">Text Sample</h3>-->
-						<h1 class="mb-20">
+						<h2 class="mb-20">
 							We are Test Communications
-						</h1>
+						</h2>
 						<p class="sample-text">
 							TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers.
 							These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.
@@ -101,13 +101,13 @@
 			  <section>
 				  <div class="whole-wrap">
 					  <div class="container">
-						  <div class="section-top-border">
-							  <h3 class="mb-30">A Letter from the CEO</h3>
+						  <div>
 							  <div class="row">
-								  <div class="col-md-4">
-									  <img src="img/ceo.jpg" alt="Darrin Wagner" style="margin-left: -35px"class="img-fluid">
+								  <div class="col-md-4 mb-30">
+									  <img src="img/ceo.jpg" alt="Darrin Wagner" class="img-fluid">
 								  </div>
-								  <div class="col-md-7 mt-sm-20">
+								  <div class="col-md-7 mt-sm-20 mb-80">
+							  <h2 class="mb-30">A Letter from the CEO</h2>
 									  <p>
 										  I would like to welcome you to the TEST Communications website. I am very pleased to write this message as the President and Chief Executive Officer of TEST Communications. I sincerely hope that after reading this, you will find a few reasons to want to know us better.
 									  </p>
