--- a/clients.html
+++ b/clients.html
@@ -57,7 +57,7 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="clients.html">Clients</a></li>
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 pb-30 header-text text-center">
-                <h1 class="mb-10">Just a few of our clients</h1>
+                <h2 class="mb-10">Just a few of our clients</h2>
                 <p>
                     We are a leading regional provider of wireless and wireline telecommunications services. Over the past twelve years we have served multiple clients in the industry. A selection of our clients is listed below.
                 </p>
@@ -108,13 +108,13 @@
             <div class="col-lg-3 mb-80">
                 <img src="img/clients/american-tower-color.png" alt="logo">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 mb-80">
                 <img src="img/clients/verizon-color.png" alt="logo">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 mb-80">
                 <img src="img/clients/crown-castle-color.png" alt="logo">
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 mb-80">
                 <img src="img/clients/t-mobile-color.png" alt="logo">
             </div>
         </div>
