--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
 <!-- Start service Area -->
 <section class="service-area section-gap" id="service">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-30">
             <div class="col-md-12 pb-30 header-text text-center">
                 <p>
                     TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers. These services include but are not limited to Line & Antenna, Microwave, Architecture & Engineering, Construction Management, Warehousing and Logistics, Fiber Optics services, Radio Frequency testing services and several other ancillary services which round out a comprehensive suite of services and offerings.
@@ -99,7 +99,7 @@
         </div>
         <div class="row mb-40">
             <div class="col-lg-3">
-                <ul class="list services">
+                <ul class="list services mb-40">
                     <li class="list-group first"><h6>Testing</h6></li>
                     <li class="list-item tab-active"><a href="#rftesting">RF Testing Services</a></li>
                     <li class="list-item"><a href="#fiber-optics">Fiber Optic Testing Services</a></li>
@@ -126,8 +126,8 @@
                 <div id="rftesting" class="tab active">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">RF Testing</h3>
+                        <div>
+                            <h2 class="text-heading">RF Testing</h2>
                             <p class="sample-text">
                                 <strong>Sweep Testing - </strong>
                                 <span>Every one of our senior technicians are thoroughly trained in RF analysis techniques through “sweep testing” of lines and antennas. Whether its one ½ RF jumper or a 14-port, multi-band antenna, we at TEST, understand the importance of this critical test element in ensuring a successful installation of 4G and 5G networks</span>
@@ -153,8 +153,8 @@
                 <div id="fiber-optics" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Fiber Optics</h3>
+                        <div>
+                            <h2 class="text-heading">Fiber Optics</h2>
                             <p class="sample-text">
                                 <strong>Fiber Characterization - </strong>
                                 <span>
@@ -220,8 +220,8 @@
                 <div id="engineering" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">EF&I</h3>
+                        <div>
+                            <h2 class="text-heading">EF&I</h2>
                             <p class="sample-text">
                                 <strong>Engineer - </strong>
                                 <span>
@@ -254,8 +254,8 @@
                 <div id="line-antenna" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Line & Antenna</h3>
+                        <div>
+                            <h2 class="text-heading">Line & Antenna</h2>
                             <p class="sample-text">
                                 TEST COMMUNICATIONS has built thousands of wireless sites over the last 12 years in the Gulf Region. Our extensive body of knowledge and experience gained during that time spans 2G, 3G, 4G, & most recently 5G projects for multiple clients including all major wireless carriers in the United States.
                             </p>
@@ -288,8 +288,8 @@
                 <div id="microwave" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Microwave</h3>
+                        <div>
+                            <h2 class="text-heading">Microwave</h2>
                             <p class="sample-text">
                                 Installation of microwave equipment and the related pathing requires careful planning and attention to detail. TEST’s technicians are trained in the installation of microwave equipment from many of the industry’s leading microwave vendors.
                             </p>
@@ -328,8 +328,8 @@
                 <div id="commissioning" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Commissioning & Integration</h3>
+                        <div>
+                            <h2 class="text-heading">Commissioning & Integration</h2>
                             <p class="sample-text">
                                 At TEST COMMUNICATIONS we understand that the integration and commissioning process is one of the most important elements of a wireless deployment. We offer our clients a turnkey service that includes C&I services. Our C&I services include installation of new modules, removal of old modules, wiring and rewiring of ethernet, fiber, GPS, alarm, and power cables as well as call testing and other related services.
                             </p>
@@ -359,8 +359,8 @@
                 <div id="plant" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Outside Plant/Inside Plant</h3>
+                        <div>
+                            <h2 class="text-heading">Outside Plant/Inside Plant</h2>
                             <p class="sample-text">
                                 Our Outside Plant services focus on fiber optics and include techniques for Aerial, Direct Buried, and Underground services.
                             </p>
@@ -381,8 +381,8 @@
                 <div id="lighting" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Lighting Services</h3>
+                        <div>
+                            <h2 class="text-heading">Lighting Services</h2>
                             <p class="sample-text">
                                 TEST COMMUNICATIONS provides services across all facets of telecommunications lighting requirements. We provide service from the smallest job to the largest job for private and government clients throughout the Gulf South Region of the U.S.
                             </p>
@@ -406,8 +406,8 @@
                 <div id="das-solutions" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">DAS Solutions</h3>
+                        <div>
+                            <h2 class="text-heading">DAS Solutions</h2>
                             <p class="sample-text">
                                 TEST COMMUNICATIONS uses a vendor-agnostic approach to designing DAS solutions which employ best-of-class technologies.
                             </p>
@@ -436,8 +436,8 @@
                 <div id="broadband" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Broadband/WIFI</h3>
+                        <div>
+                            <h2 class="text-heading">Broadband/WIFI</h2>
                             <p class="sample-text">
                                 Broadband and WIFI typically go hand-in-hand in this day and age. TEST has expertise in network design, testing, installation, and deployment of Broadband based WIFI solutions in multiple scenarios including but not limited to rooftops, water tanks, light poles, power poles, and other related deployment scenarios.
                             </p>
@@ -455,8 +455,8 @@
                 <div id="site-acquisition" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Site Acquisition</h3>
+                        <div>
+                            <h2 class="text-heading">Site Acquisition</h2>
                             <p class="sample-text">
                                 TEST COMMUNICATIONS provides a comprehensive suite of services relating to and commonly and collectively referred to as “Site Acquisition”
                             </p>
@@ -494,8 +494,8 @@
                 <div id="architecture" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Architecture & Engineering</h3>
+                        <div>
+                            <h2 class="text-heading">Architecture & Engineering</h2>
                             <p class="sample-text">
                                 Utilizing experts with years of relevant industry experience, TEST COMMUNICATIONS provides a full range of A&E services to its wireless and wireline telecommunications clients. Our comprehensive consulting services include:
                             </p>
@@ -527,8 +527,8 @@
                 <div id="tower-modification" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Tower Modification</h3>
+                        <div>
+                            <h2 class="text-heading">Tower Modification</h2>
                             <p class="sample-text">
                                 TEST COMMUNICATIONS has extensive, direct experience, meeting the tower modification requirements and specifications of all of the major tower owners (Crown Castle, SBA, & ATC) as well those of the major carriers (AT&T, Verizon, Sprint & T-Mobile) in cooperation with the tower owners and their chosen A&E firms.
                             </p>
@@ -558,8 +558,8 @@
                 <div id="rawland" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Build-to-Suit/Greenfield/Raw-Land Services</h3>
+                        <div>
+                            <h2 class="text-heading">Build-to-Suit/Greenfield/Raw-Land Services</h2>
                             <p class="sample-text">
                                 TEST has successfully provided build-to-suit services to major wireless and tower owner customers across the Gulf Region. We utilize both in-house resources and trusted outside partners in a sub-contractor capacity to completely meet the needs of our customers in a timely fashion for all of their raw-land projects.
                             </p>
@@ -586,8 +586,8 @@
                 <div id="safety" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Safety & Quality</h3>
+                        <div>
+                            <h2 class="text-heading">Safety & Quality</h2>
                             <p class="sample-text">
                                 Safety is first and foremost our top priority throughout every facet of our operations. We incorporate quality controls with rigorous safety management practices which we believe benefit every individual within our organization and result in superior services being delivered to each and every one of our customers.
                             </p>
@@ -634,8 +634,8 @@
                 <div id="warehousing" class="tab">
                     <!-- Start Sample Area -->
                     <section class="sample-text-area">
-                        <div class="container">
-                            <h3 class="text-heading">Warehousing & Logistics</h3>
+                        <div>
+                            <h2 class="text-heading">Warehousing & Logistics</h2>
                             <p class="sample-text">
                                 Warehousing and logistics services are a necessary component of any wireless deployment project. Often, clients are faced with a shortage of secure and accessible space to store equipment which will be needed in the near future for deployment to sites.
                             </p>
