--- a/clients.html
+++ b/clients.html
@@ -87,7 +87,7 @@
 
 <section class="home-client-area section-gap" id="client">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-30">
             <div class="col-md-12 pb-30 header-text text-center">
                 <h2 class="mb-10">Just a few of our clients</h2>
                 <p>
