more content updates before launch

--- a/about.html
+++ b/about.html
@@ -37,11 +37,9 @@
 				  		<div class="row">
 				  			<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
 				  				<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-
-									<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-				  				</ul>
+									<li><a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a></li>
+								</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 				  				<a href="tel:985-863-5510">985-863-5510</a>
@@ -90,7 +88,7 @@
 					<div class="container">
 						<!--<h3 class="text-heading">Text Sample</h3>-->
 						<h2 class="mb-20">
-							We are Test Communications
+							Test Communications
 						</h2>
 						<p class="sample-text">
 							TEST COMMUNICATIONS is a leading regional provider of a full range of services for both wireless and wireline telecommunications customers.
@@ -112,28 +110,29 @@
 										  I would like to welcome you to the TEST Communications website. I am very pleased to write this message as the President and Chief Executive Officer of TEST Communications. I sincerely hope that after reading this, you will find a few reasons to want to know us better.
 									  </p>
 									  <p>
-										  TEST was founded in 2005 and recently celebrated its thirteenth year of continuous operations.  TEST has strived to embrace the missions of our clients and to make serving them our primary focus. Identifying their requirements and executing on our commitment to excellence in service delivery are the underpinning of the forces that propel us towards our goal of achieving customer satisfaction each and every time.
+										  TEST was founded in 2005 and has strived to embrace the missions of our clients and to make serving them our primary focus. Identifying their requirements and executing on our commitment to excellence in service delivery are the underpinning of the forces that propel us towards our goal of achieving customer satisfaction each and every time.
 									  </p>
 									  <p>
 										  At this time in our company’s history, and amidst the backdrop of a particularly challenging financial and business environment, we continue to push the limits of our boundaries and achieve phenomenal growth without looking back. Here at TEST Communications, our core values, drive every aspect of our operations and we firmly believe they are what set us apart from our industry peers:
 									  </p>
 									  <p>
-										  <strong class="bold-600">T</strong>eamwork: An essential part of the execution process is teaming up with our clients to ensure that their requirements are being met. We believe it’s important to foster a positive internal culture with the concept of “TEAM First” being central to our success. Our employees are the lifeblood of TEST Communications and we value every one of them for their individual contributions to our team.
+										  <strong class="bold-800 ft-base"><strong class="ft-md text-underline">T</strong>eamwork:</strong> An essential part of the execution process is teaming up with our clients to ensure that their requirements are being met. We believe it’s important to foster a positive internal culture with the concept of “TEAM First” being central to our success. Our employees are the lifeblood of TEST Communications and we value every one of them for their individual contributions to our team.
 									  </p>
 									  <p>
-										  <strong class="bold-600">E</strong>xcellence: We are continuously monitoring our people and processes to assure that we provide the highest level of service and a quality experience for our all our clients. From the bid & quoting process to the final payment and everything in between, we strive to be <strong>Excellent</strong> in every aspect.
+										  <strong class="bold-800 ft-base"><strong class="ft-md text-underline">E</strong>xcellence:</strong> We are continuously monitoring our people and processes to assure that we provide the highest level of service and a quality experience for our all our clients. From the bid & quoting process to the final payment and everything in between, we strive to be <strong>Excellent</strong> in every aspect.
 									  </p>
 									  <p>
-										  <strong class="bold-600">S</strong>afety is # 1: We take pride in our safety processes and record. There is nothing more important to us than the safety of our employees and clients.
+										  <strong class="bold-800 ft-base"><strong class="ft-md text-underline">S</strong>afety</strong> is # 1: We take pride in our safety processes and record. There is nothing more important to us than the safety of our employees and clients.
 									  </p>
 									  <p>
-										  <strong class="bold-600">T</strong>imely: We realize that projects are driven by deadlines. Succeeding in the timely presentation of required deliverables to our clients, facilitates client success at each step of the process. We enable our clients to serve their clients on time and on schedule.
+										  <strong class="bold-800 ft-base"><strong class="ft-md text-underline">T</strong>imely:</strong> We realize that projects are driven by deadlines. Succeeding in the timely presentation of required deliverables to our clients, facilitates client success at each step of the process. We enable our clients to serve their clients on time and on schedule.
 									  </p>
 									  <p>Looking toward the future, we will continue building upon our past success by expanding our customer portfolio, project experience and by making significant investments in our employees and strategic partners. We will target improvements in processes and methodologies while maintaining a fanatical focus on safety, training, and customer satisfaction. </p>
 									  <p>I am excited about this journey and invite you to learn more about TEST Communications by exploring our website or contacting us directly. </p>
 									  <p>
 										  Sincerely,
-										  <br><br>
+										  <br>
+										  <img class="ceo-signature" src="img/signature.png" alt="CEO Signature" />
 									  <p>Darrin Wagner</p>
 									  <p>President and Chief Executive Officer<p>
 									  </p>
@@ -149,10 +148,13 @@
 					<div class="row">
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>About Us</h6>
-								<p>
-									We are a leading regional provider of wireless and wireline telecommunications services.
-								</p>
+								<h6>Our Core Values</h6>
+								<div>
+									<div class="core-values"><strong>T</strong><span>eamwork</span></div>
+									<div class="core-values"><strong>E</strong><span>xcellence</span></div>
+									<div class="core-values"><strong>S</strong><span>afety</span></div>
+									<div class="core-values"><strong>T</strong><span>imely</span></div>
+								</div>
 								<p class="footer-text">
 								</p>								
 							</div>
@@ -164,10 +166,9 @@
 								<h6>Follow Us</h6>
 								<p>Let us be social</p>
 								<div class="footer-social d-flex align-items-center">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-
-									<a href="#"><i class="fa fa-instagram"></i></a>
+									<a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/company/test-communications‬"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a>
 								</div>
 							</div>
 						</div>							
