--- a/careers.html
+++ b/careers.html
@@ -37,9 +37,8 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -85,21 +84,48 @@
 </section>
 <!-- End banner Area -->
 
-<!-- Start contact-page Area -->
-<section class="contact-page-area section-gap">
+<!-- Start Sample Area -->
+<section class="mt-80">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 d-flex flex-column address-wrap align-center">
-                <div class="error-template error-page">
-                    <p>
-                        Job Postings Coming Soon
-                    </p>
-                </div>
-            </div>
-        </div>
+        <h3 class="text-heading">Apprentice</h3>
+        <p class="sample-text">
+            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
+
+        </p>
+        <a href="mailto:hr@testcomm.com?subject=Apprentice Position" class="genric-btn primary">Apply</a>
     </div>
 </section>
-<!-- End contact-page Area -->
+<section class="mt-80">
+    <div class="container">
+        <h3 class="text-heading">Tower Technician 1</h3>
+        <p class="sample-text">
+            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
+
+        </p>
+        <a href="mailto:hr@testcomm.com?subject=Tower Technician 1 Position" class="genric-btn primary">Apply</a>
+    </div>
+</section>
+<section class="mt-80">
+    <div class="container">
+        <h3 class="text-heading">Tower Technician 2</h3>
+        <p class="sample-text">
+            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
+
+        </p>
+        <a href="mailto:hr@testcomm.com?subject=Tower Technician 2 Position" class="genric-btn primary">Apply</a>
+    </div>
+</section>
+<section class="mt-80 mb-80">
+    <div class="container">
+        <h3 class="text-heading">Wireless Crew Foreman</h3>
+        <p class="sample-text">
+            Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary, or short film to show off their creative prowess. Many have great ideas and want to “wow” the<sup>Superscript</sup> scene, or video renters with their big project.  But once you have the<sub>Subscript</sub> “in the can” (no easy feat), how do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked hand-written title inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC barcodes and polywrap sitting on your doorstep?  You need to create eye-popping artwork and have your project replicated. Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is certainly a helpful option to ensure a professional end result, but to help with your DVD replication project, here are 4 easy steps to follow for good DVD replication results:
+
+        </p>
+        <a href="mailto:hr@testcomm.com?subject=Wireless Crew Forman Position" class="genric-btn primary">Apply</a>
+    </div>
+</section>
+<!-- End Sample Area -->
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -107,10 +133,13 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-6">
                 <div class="single-footer-widget">
-                    <h6>About Us</h6>
-                    <p>
-                        We are a leading regional provider of wireless and wireline telecommunications services.
-                    </p>
+                    <h6>Our Core Values</h6>
+                    <div>
+                        <div class="core-values"><strong>T</strong><span>eamwork</span></div>
+                        <div class="core-values"><strong>E</strong><span>xcellence</span></div>
+                        <div class="core-values"><strong>S</strong><span>afety</span></div>
+                        <div class="core-values"><strong>T</strong><span>imely</span></div>
+                    </div>
                     <p class="footer-text">
 
                     </p>
@@ -123,10 +152,8 @@
                     <h6>Follow Us</h6>
                     <p>Let us be social</p>
                     <div class="footer-social d-flex align-items-center">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
