--- a/clients.html
+++ b/clients.html
@@ -37,10 +37,8 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -90,9 +88,6 @@
         <div class="row justify-content-center mb-30">
             <div class="col-md-12 pb-30 header-text text-center">
                 <h2 class="mb-10">Just a few of our clients</h2>
-                <p>
-                    We are a leading regional provider of wireless and wireline telecommunications services. Over the past twelve years we have served multiple clients in the industry. A selection of our clients is listed below.
-                </p>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -127,7 +122,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-6">
                 <div class="single-footer-widget">
-                    <h6>About Us</h6>
+                    <h6>Our Core Values</h6>
                     <p>
                         We are a leading regional provider of wireless and wireline telecommunications services.
                     </p>
@@ -142,10 +137,8 @@
                     <h6>Follow Us</h6>
                     <p>Let us be social</p>
                     <div class="footer-social d-flex align-items-center">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
