--- a/elements.html
+++ b/elements.html
@@ -35,10 +35,8 @@
 				  		<div class="row">
 				  			<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
 				  				<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-
 									<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+									<li><a href="https://www.linkedin.com/company/test-communications"><i class="fa fa-linkedin"></i></a></li>
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -622,10 +620,13 @@
 					<div class="row">
 						<div class="col-lg-5 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>About Us</h6>
-								<p>
-									We are a leading regional provider of wireless and wireline telecommunications services.
-								</p>
+								<h6>Our Core Values</h6>
+								<div>
+									<div class="core-values"><strong>T</strong><span>eamwork</span></div>
+									<div class="core-values"><strong>E</strong><span>xcellence</span></div>
+									<div class="core-values"><strong>S</strong><span>afety</span></div>
+									<div class="core-values"><strong>T</strong><span>imely</span></div>
+								</div>
 								<p class="footer-text">
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -655,10 +656,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<h6>Follow Us</h6>
 								<p>Let us be social</p>
 								<div class="footer-social d-flex align-items-center">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-
-									<a href="#"><i class="fa fa-instagram"></i></a>
+									<a href="https://www.facebook.com/TESTCOMMUNICATIONS/"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/company/test-communications‬"><i class="fa fa-linkedin"></i></a>
 								</div>
 							</div>
 						</div>							
